src/objects/ClearTV_Campaign__c.object
<CustomObject>
    <description>Tracks the advertising sold at dental practices by the ClearTV program</description>
    <fields>
        <fullName>Dental_Practice__c</fullName>
        <description>The practice the campaign was sold for</description>
        <label>Dental Practice</label>
        <referenceTo>Dental_Practice__c</referenceTo>
        <relationshipLabel>ClearTV_Campaigns</relationshipLabel>
        <relationshipName>ClearTV_Campaigns</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Date the campaign ended</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Date the campaign started</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>ClearTV_Campaign</label>
    <nameField>
        <label>ClearTV_Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ClearTV_Campaigns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>